--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
 
   flutter:
@@ -12,6 +13,7 @@ dependencies:
 
   # play videos
   flutter_downloader: ^1.7.4
+  marquee_widget: ^1.2.0
   sqflite: ^2.0.2+1
   video_player: ^2.4.2
   weather: ^2.0.1
