--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   weather: ^2.0.1
 
 dev_dependencies:
+  firebase_core: ^1.17.1
+  firebase_database: ^9.0.15
   flutter_bloc: ^8.0.1
   flutter_test:
     sdk: flutter
@@ -29,7 +31,6 @@ dev_dependencies:
   nepali_utils: ^3.0.3
   path_provider: ^2.0.11
   permission_handler: ^9.2.0
-  
 
 flutter:
   uses-material-design: true
